product-management-app/k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  selector:
    matchLabels:
      app: product-app
  replicas: 2
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
      - name: product-app
        image: product-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: product-app-service
spec:
  selector:
    app: product-app
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
